docs: readme fix
